# TickTask-Backend

./: .env  .gitignore  pyproject.toml
tests/: test_main.py
todo_app/: auth.py  db.py  main.py  model.py  settings.py
todo_app/router/: user.py
